# image-segmentation-subscriber

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: python_ci.yaml
image_segmentation/: config.py  main.py
image_segmentation/src/db/: db_protocol.py
image_segmentation/src/db/mongo/: mongo_db_connector.py
image_segmentation/src/image_segmentation/image_segmentation_model/: segmentatin_model_factory.py
image_segmentation/src/image_segmentation/image_segmentation_model/sam_model/: model.py
image_segmentation/src/image_segmentation/visualisation/: effects_model_protocol.py
image_segmentation/src/image_segmentation/visualisation/mask/: mask_model.py
image_segmentation/src/queue/: queue_protocols.py
image_segmentation/src/queue/handler/: handler_protocol.py  message_handler.py
image_segmentation/src/queue/rabbitmq/: subscriber_protocol.py
image_segmentation/src/queue/rabbitmq/publisher/: rabbitmq_publisher.py
image_segmentation/src/queue/rabbitmq/subscriber/: rabbitmq_subscriber.py
image_segmentation/src/utils/: download_model.py
subscriber/src/image_segmentation/image_segmentation_model/: ml_model_protocol.py  model.py  segmentatin_model_factory.py
subscriber/src/image_segmentation/image_segmentation_model/sam_model/: model.py
subscriber/src/image_segmentation/visualisation/: effects_model_protocol.py
subscriber/src/image_segmentation/visualisation/mask/: mask_model.py
subscriber/src/queue/handler/: handler_protocol.py  message_handler.py
(+1 files in other folders)
