[tool.poetry]
name = "image-segmentation"
version = "0.1.0"
description = ""
authors = ["rostekus <rostyslavmosorov@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "image_segmentation"}]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.1"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
