[tool.poetry]
name = "image-segmentation"
version = "0.1.0"
description = ""
authors = ["rostekus <rostyslavmosorov@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "image_segmentation"}]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.1"
numpy = "^1.24.2"
torch = "^2.0.0"
torchvision = "^0.15.1"
opencv-python = "^4.7.0.72"
pymongo = "^4.3.3"
segment-anything = "^1.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
poetry-dotenv-plugin = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 127
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 310


[tool.mypy]
ignore_missing_imports = true
